# analyze-elm-pkg-deps

./: analyze-elm-pkg-deps.cabal
src/: Main.hs
